Add new document types (DTSBPS-1103) (#2654)